--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -4,7 +4,7 @@ block content
 	include ../sections/_header
 	main.main
 		include ../sections/page-about/_promo.pug
-		include ../sections/_about
+		include ../sections/page-about/_about
 		include ../sections/_service-poppulare.pug
 		include ../sections/_review-section
 	//FOOTER
