--- a/src/pug/sections/page-about/_promo.pug
+++ b/src/pug/sections/page-about/_promo.pug
@@ -1,36 +1,30 @@
 .promo.promo-inner
 	.promo-bg-image.hide-sm(style="background-image: url(./img/about/about-big.webp) ")
-	.promo-bg-image.visible-sm(style="background-image: url(./img/about/about-big.webp) ")
-	.promo-top
-		.container.pl-110
-			.left-decore-line
-				span.decore-line__top
-				p наши услуги
-				span.decore-line__bottom
-					svg.svg-arDown
-						use(href='./img/sprite.svg#svg-arDown')
-			.promo-title__content
-				.promo-title__head
-				
-					h1.h1 Всё на 4-х<br>(All-on-4)
-					p.promo-subtitle Вся хирургическая часть с установкой имплантатов и мультиюнитов
-				//картинка на mob экранах
-				.promo-img.promo-img--mob
-					img.cover-img(src="./img/img.webp", width="823" height="663" alt="img")
-					
-					span.decore-text-top улыбки
-					span.decore-text-bottom жизни
-				
-				.promo-title__box.flex-col
-					.price-block
-						p.txt-24 Без скидки: #[span 150 000 ₽]
-						p.h1 75 000&nbsp;&#8381;
-					.promo-buttons.flex
-						button.btn Записаться на консультацию
-						button.btn-outline Узнать все цены
-			
-			
+	.promo-bg-image.visible-sm(style="background-image: url(./img/about/about-big-360.webp) ")
 	
-	//bottom row
-	.promo-bottom.flex
+	.breadcrumbs-wrapper.breadcrumbs-white
+		.container
+			ul.breadcrumbs
+				li
+					a(href="#!") Newlinedent
+				li
+					a(href="#!") О компании
+	
+	.container.pl-110
+		.left-decore-line
+			span.decore-line__top
+			p о нашей клинике 
+			span.decore-line__bottom
+				svg.svg-arDown
+					use(href='./img/sprite.svg#svg-arDown')
+		
+		
+		.promo-inner__content
+			.promo-inner__title
+				h1.h1.txt-white Стоматологическая #[span.gogol-text.txt-white клиника]  newlinedent
+			
+			.promo-inner__description
+				p Клиника #[strong Newlinedent] — это комфорт и качество. Наши специалисты используют современные технологии и уделяют внимание каждому пациенту, чтобы лечение проходило легко и без стресса.
+				p Предоставляем широкий спектр услуг: от отбеливания до имплантации зубного ряда под ключ. Мы помогаем вам сохранить здоровье зубов и уверенность в своей улыбке на долгие годы.
+		
 		
