--- a/src/scss/base/_breadcrumbs.scss
+++ b/src/scss/base/_breadcrumbs.scss
@@ -1,6 +1,8 @@
 @use "base/var" as *;
 .breadcrumbs-wrapper{
 	padding-block:7px;
+	position: relative;
+	z-index: 4;
 	@media (max-width: 767px) {
 	display: none;
 	}
@@ -43,4 +45,14 @@
 		}
 	}
 	
+}
+.breadcrumbs-wrapper.breadcrumbs-white{
+	.breadcrumbs a{
+		color: white;
+	}
+	li:after{
+		
+		background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='6' height='12' viewBox='0 0 6 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M4.57169 6.07947L0.00111541 1.22368L0.665475 0.5L6 6.07947L0.66551 11.5L-3.16332e-08 10.7763L4.57169 6.07947Z' fill='%23FFFFFF' /%3e%3c/svg%3e");
+		
+	}
 }
