--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -3,13 +3,13 @@
 .h1, h1, .h2, h2{
 	font-family: var(--second-family);
 	font-weight: 300;
-	font-weight: 700;
+	// font-weight: 700;
 }
 .h1, h1{
 	font-size: 50px;
 	line-height: 1.2;
 	letter-spacing: -0.06em;
-	font-weight: 700;
+	font-weight: 300;
 	text-transform: uppercase;
 	@media (max-width: 1919px) {
 		font-size: remy(50);
@@ -97,6 +97,7 @@
 	margin-left: 5px;
 	margin-right: 5px;
 	color: #c7491f;
+
 	@media (max-width: 1919px) {
 		font-size: remy(70);
 	}
@@ -104,6 +105,7 @@
 		font-size: 70px;
 	}
 }
+
 .txt-white{
 	color: white!important;
 }
