--- a/src/scss/sections/_promo-main.scss
+++ b/src/scss/sections/_promo-main.scss
@@ -206,7 +206,7 @@
 			}
 			p{
 				padding-block:20px;
-				background-color: $pr;
+				// background-color: $pr;
 				position: relative;
 				z-index: 2;
 				width: fit-content;
