--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -283,6 +283,9 @@ section{
 	padding-top: 10px!important;
 	}
 }
+.p-block-20{
+padding-block: 20px;
+}	
 .left-decore-line{
 	position: absolute;
 	top: 0;
