--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,6 +10,7 @@ block content
 			a(href="main.html") Главная
 			a(href="review.html") Отзывы
 			a(href="about.html") О компании
+			a(href="before_after.html") До/после
 
 block variables
 	-var title = "Pizza Mega Magic";
