--- a/src/pug/sections/page-about/_promo.pug
+++ b/src/pug/sections/page-about/_promo.pug
@@ -1,4 +1,4 @@
-.promo.promo-inner
+.promo.promo-about
 	.promo-bg-image.hide-sm(style="background-image: url(./img/about/about-big.webp) ")
 	.promo-bg-image.visible-sm(style="background-image: url(./img/about/about-big-360.webp) ")
 	
@@ -19,11 +19,11 @@
 					use(href='./img/sprite.svg#svg-arDown')
 		
 		
-		.promo-inner__content
-			.promo-inner__title
+		.promo-about__content
+			.promo-about__title
 				h1.h1.txt-white Стоматологическая #[span.gogol-text.txt-white клиника]  newlinedent
 			
-			.promo-inner__description
+			.promo-about__description
 				p Клиника #[strong Newlinedent] — это комфорт и качество. Наши специалисты используют современные технологии и уделяют внимание каждому пациенту, чтобы лечение проходило легко и без стресса.
 				p Предоставляем широкий спектр услуг: от отбеливания до имплантации зубного ряда под ключ. Мы помогаем вам сохранить здоровье зубов и уверенность в своей улыбке на долгие годы.
 		
