--- a/src/pug/sections/_cta.pug
+++ b/src/pug/sections/_cta.pug
@@ -12,20 +12,23 @@ section.cta
 				p #[span.quote-dark] Мы#[br.hide-sm] создаем #[br.visible-sm] #[span.gogol-text улыбки]
 				.rotate-image.rotate-image1
 					img(src='./img/rotate/2.webp' width='234' height='261' loading='lazy' alt='img')
-					span.img-caption виниры<br>что то там
+					.flex
+						span.img-caption виниры<br>что то там
 			
 			.cta-center.cta-big-txt
 				.cta-text-big
 					p которые меняют
 					.rotate-image.rotate-image3
 						img(src='./img/rotate/3.webp' width='234' height='261' loading='lazy' alt='img')
-						span.img-caption виниры<br>что то там
+						.flex
+							span.img-caption виниры<br>что то там
 				
 			.cta-bottom.cta-big-txt
 				p #[span.gogol-text жизни] людей #[span.quote-dark]
 				.rotate-image.rotate-image2
 					img(src='./img/rotate/1.webp' width='234' height='261' loading='lazy' alt='img')
-					span.img-caption виниры<br>что то там
+					.flex
+						span.img-caption виниры<br>что то там
 
 			.siple-txt-bottom
 				p  Каждый день — это новая возможность для нас сделать мир вокруг лучше!
