--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -85,11 +85,11 @@ footer.footer
 					.footer-nav__title О нас 
 					ul.footer-nav__list
 						li
-							a(href="#!") о клинике
+							a(href="about.html") о клинике
 						li
 							a(href="#!") наши врачи 
 						li
-							a(href="#!") до / после 
+							a(href="before_after.html") до / после 
 						li
 							a(href="#!") Отзывы
 						li
