--- a/src/pug/sections/_header-main-page.pug
+++ b/src/pug/sections/_header-main-page.pug
@@ -18,7 +18,7 @@ header.header.header--primary
 						li
 							a(href="service-page.html") Услуги и цены
 						li
-							a(href="#!") до / после
+							a(href="before_after.html") до / после
 						li
 							a(href="#!") наши врачи
 						li
