--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -18,7 +18,7 @@ header.header
 						li
 							a(href="service-page.html") Услуги и цены
 						li
-							a(href="#!") до / после
+							a(href="before_after.html") до / после
 						li
 							a(href="#!") наши врачи
 						li
@@ -28,7 +28,6 @@ header.header
 						li
 							a(href="#!") Контакты
 						
-					
 					
 					.address-block
 						.address-block__metro
