--- a/src/pug/sections/before-after/_promo.pug
+++ b/src/pug/sections/before-after/_promo.pug
@@ -1,15 +1,15 @@
-.promo.promo-inner.promo-inner--slim
-	.breadcrumbs-wrapper.breadcrumbs-white
+.promo.promo-inner
+	.breadcrumbs-wrapper
 		.container
 			ul.breadcrumbs
 				li
-					a(href="#!") Newlinedent
+					a(href="index.html") Newlinedent
 				li
 					a(href="#!") до/после
 	
 	.container
 		.promo-inner__grid.grid-two-column
-			.promo-inner__title
+			.promo-inner__title.flex-col
 				h1.h1 Фото работ:<br>до и после
 				p Реальные результаты, которые вдохновляют
 				a(href="#!").btn-primary
@@ -20,15 +20,18 @@
 			.promo-inner__right
 				.rotate-img-group
 					.rotate-image.rotate-image1
-						img(src='./img/rotate/2.webp' width='234' height='261' loading='lazy' alt='img')
-						span.img-logo
-						span.img-caption виниры<br>что то там
-					.rotate-image.rotate-image1
-						img(src='./img/rotate/2.webp' width='234' height='261' loading='lazy' alt='img')
-						span.img-logo
-						span.img-caption.img-caption--name Мария 
-					.rotate-image.rotate-image1
-						img(src='./img/rotate/2.webp' width='234' height='261' loading='lazy' alt='img')
-						span.img-logo
-						span.img-caption.img-caption--name Любовь
+						img(src='./img/rotate/5.webp' width='230' height='250' loading='lazy' alt='img')
+						.flex
+							span.img-logo
+							span.img-caption виниры<br>что то там
+					.rotate-image.rotate-image2
+						img(src='./img/rotate/6.webp' width='230' height='250' loading='lazy' alt='img')
+						.flex
+							span.img-logo
+							span.img-caption.img-caption--name Мария 
+					.rotate-image.rotate-image3
+						img(src='./img/rotate/7.webp' width='230' height='250' loading='lazy' alt='img')
+						.flex
+							span.img-logo
+							span.img-caption.img-caption--name Любовь
 		
