--- a/src/pug/sections/before-after/_promo.pug
+++ b/src/pug/sections/before-after/_promo.pug
@@ -12,26 +12,27 @@
 			.promo-inner__title.flex-col
 				h1.h1 Фото работ:<br>до и после
 				p Реальные результаты, которые вдохновляют
-				a(href="#!").btn-primary
-					span Записаться на прием 
-					svg.svg-rarr
-						use(href='../img/sprite.svg#svg-rarr')
+				.promo-inner__btn
+					a(href="#!").btn-primary.sm-100
+						span Записаться на прием 
+						svg.svg-rarr
+							use(href='../img/sprite.svg#svg-rarr')
 			
-			.promo-inner__right
-				.rotate-img-group
-					.rotate-image.rotate-image1
-						img(src='./img/rotate/5.webp' width='230' height='250' loading='lazy' alt='img')
-						.flex
-							span.img-logo
-							span.img-caption виниры<br>что то там
-					.rotate-image.rotate-image2
-						img(src='./img/rotate/6.webp' width='230' height='250' loading='lazy' alt='img')
-						.flex
-							span.img-logo
-							span.img-caption.img-caption--name Мария 
-					.rotate-image.rotate-image3
-						img(src='./img/rotate/7.webp' width='230' height='250' loading='lazy' alt='img')
-						.flex
-							span.img-logo
-							span.img-caption.img-caption--name Любовь
+			
+			.rotate-img-group
+				.rotate-image.rotate-image1
+					img(src='./img/rotate/5.webp' width='230' height='250' loading='lazy' alt='img')
+					.flex
+						span.img-logo
+						span.img-caption виниры<br>что то там
+				.rotate-image.rotate-image2
+					img(src='./img/rotate/6.webp' width='230' height='250' loading='lazy' alt='img')
+					.flex
+						span.img-logo
+						span.img-caption.img-caption--name Мария 
+				.rotate-image.rotate-image3
+					img(src='./img/rotate/7.webp' width='230' height='250' loading='lazy' alt='img')
+					.flex
+						span.img-logo
+						span.img-caption.img-caption--name Любовь
 		
