--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,10 @@
 
 @use "sections/_inner-promo";
 @use "sections/_clinica-slider";
+@use "blocks/_tabs";
+@use "sections/_before-after";
+
+
 
 
 
