--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,10 +7,11 @@ block content
 			a(href="./ui/colors.html") UI
 			a(href="main.html") Главная
 			a(href="service-page.html") Услуги
-			a(href="main.html") Главная
+			
 			a(href="review.html") Отзывы
 			a(href="about.html") О компании
 			a(href="before_after.html") До/после
+			a(href="specialists.html") Наши врачи
 
 block variables
 	-var title = "Pizza Mega Magic";
