--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -11,7 +11,7 @@ block content
 			a(href="review.html") Отзывы
 			a(href="about.html") О компании
 			a(href="before_after.html") До/после
-			a(href="specialists.html") Наши врачи
+			a(href="doctors.html") Наши врачи
 
 block variables
-	-var title = "Pizza Mega Magic";
+	-var title = "NewLineDent";
