--- a/src/pug/sections/_our-team.pug
+++ b/src/pug/sections/_our-team.pug
@@ -57,79 +57,50 @@ section.team
 						.persone-card__img
 							img.cover-img(src="./img/team/1.webp", srcset="./img/team/1@2x.webp"  width="281" height='187' alt="img")
 						.persone-card-block
-							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__title Залешина Анна Борисовна
 							.persone-card__info
-								p Основатель клиники
-								p Стоматолог - хирург, имплантолог, пародонтолог
+								p Главный врач, стоматолог – ортопед, гнатолог, эстетист
+								
 					.swiper-slide.persone-card
 						//card
 						.persone-card__img
 							img.cover-img(src="./img/team/2.webp", srcset="./img/team/2@2x.webp"  width="281" height='187' alt="img")
 						.persone-card-block
-							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__title  Дегоев Чермен Олегович
 							.persone-card__info
-								p Основатель клиники
-								p Стоматолог - хирург, имплантолог, пародонтолог 
+								p Стоматолог – терапевт, эндодонтист
+								
 					
 					.swiper-slide.persone-card
 						//card
 						.persone-card__img
 							img.cover-img(src="./img/team/3.webp", srcset="./img/team/3@2x.webp"  width="281" height='187' alt="img")
 						.persone-card-block
-							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__title  Косова Наталия Ивановна
 							.persone-card__info
-								p Основатель клиники
-								p Стоматолог - хирург, имплантолог, пародонтолог 
-								
+								p Стоматолог – ортодонт
+					
 					.swiper-slide.persone-card
 						//card
 						.persone-card__img
 							img.cover-img(src="./img/team/4.webp", srcset="./img/team/4@2x.webp"  width="281" height='187' alt="img")
 						.persone-card-block
-							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__title  Савостиков Роман Андреевич
 							.persone-card__info
-								p Основатель клиники
-								p Стоматолог - хирург, имплантолог, пародонтолог 
-					
-					.swiper-slide.persone-card
-						//card
-						.persone-card__img
-							img.cover-img(src="./img/team/5.webp", srcset="./img/team/5@2x.webp"  width="281" height='187' alt="img")
-						.persone-card-block
-							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
-							.persone-card__info
-								p Основатель клиники
-								p Стоматолог - хирург, имплантолог, пародонтолог 
+								p Стоматолог – ортопед
+								
 
 					.swiper-slide.persone-card
 						//card
 						.persone-card__img
-							img.cover-img(src="./img/team/3.webp", srcset="./img/team/3@2x.webp"  width="281" height='187' alt="img")
-						.persone-card-block
-							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
-							.persone-card__info
-								p Основатель клиники
-								p Стоматолог - хирург, имплантолог, пародонтолог 
-								
-					.swiper-slide.persone-card
-						//card
-						.persone-card__img
-							img.cover-img(src="./img/team/4.webp", srcset="./img/team/4@2x.webp"  width="281" height='187' alt="img")
-						.persone-card-block
-							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
-							.persone-card__info
-								p Основатель клиники
-								p Стоматолог - хирург, имплантолог, пародонтолог 
-					
-					.swiper-slide.persone-card
-						//card
-						.persone-card__img
 							img.cover-img(src="./img/team/5.webp", srcset="./img/team/5@2x.webp"  width="281" height='187' alt="img")
 						.persone-card-block
-							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__title  Бейноева Лейла Ахмедовна
 							.persone-card__info
-								p Основатель клиники
-								p Стоматолог - хирург, имплантолог, пародонтолог 			
+								p Стоматолог – терапевт, эндодонтист
+								
+								
+					
 			
 			//nav right arrow(на макете была только одна стрелка вправо)
 			button.teams-cards-next
