--- a/src/scss/sections/_our-team.scss
+++ b/src/scss/sections/_our-team.scss
@@ -211,7 +211,7 @@
 	}
 }
 .teams-cards .swiper-wrapper{
-	
+	.swiper-slide{height: unset;}
 	@media (max-width: 1023px) {
 		.swiper-slide{width: 210px!important;}
 		
