--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -56,6 +56,21 @@
 		font-size: remy(24);
 	}
 }
+.title-24{
+	font-family: var(--second-family);
+	font-weight: 300;
+	font-size: 24px;
+	line-height: 117%;
+	color: #2e3033;
+	@media (max-width: 1919px) {
+		font-size: remy(24);
+	}
+	@media (max-width: 767px) {
+		font-size: 17px;
+		line-height: 111%;
+		text-transform: uppercase;
+	}
+}
 .title-26{
 	font-family: var(--second-family);
 	font-weight: 300;
