--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -87,7 +87,7 @@ footer.footer
 						li
 							a(href="about.html") о клинике
 						li
-							a(href="#!") наши врачи 
+							a(href="doctors.html") наши врачи
 						li
 							a(href="before_after.html") до / после 
 						li
