--- a/src/pug/sections/_header-main-page.pug
+++ b/src/pug/sections/_header-main-page.pug
@@ -20,7 +20,7 @@ header.header.header--primary
 						li
 							a(href="before_after.html") до / после
 						li
-							a(href="#!") наши врачи
+							a(href="doctors.html") наши врачи
 						li
 							a(href="review.html") Отзывы 
 						li
